zona de subtemas terminada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Menu.ui.Asignaturas.subCarpetas.subCarpetaActivity"></activity>
-
-
+        <activity android:name=".Menu.ui.Asignaturas.subCarpetas.SubtemaActivity"></activity>
         <!--
                Set to true if your app is Standalone, that is, it does not require the handheld
                app to run.
         -->
-
-
-
         <activity
             android:name=".Menu.MenuActivity"
             android:label="@string/title_activity_menu"
