--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,14 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Menu.ui.Tareas.Datos_Tarea"></activity>
+        <activity android:name=".Menu.ui.Tareas.Datos_Tarea" />
         <activity android:name=".Menu.ui.Asignaturas.configAsignatura" />
-        
         <activity
             android:name=".Tablero.TableroActivity"
-            android:label="@string/title_activity_lista_tableros">
-
-        </activity>
+            android:label="@string/title_activity_lista_tableros"></activity>
         <activity android:name=".Menu.ui.Asignaturas.subCarpetas.SubtemaActivity" />
         <!--
                Set to true if your app is Standalone, that is, it does not require the handheld
@@ -33,23 +30,18 @@
         <activity
             android:name=".Menu.MenuActivity"
             android:label="@string/title_activity_menu"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".UserActivity" />
         <activity android:name=".Registro.Register" />
         <activity android:name=".Login.Login" />
-
         <activity android:name=".MainActivity">
-        <activity android:name=".tablero.Tablero">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Registro.Register" />
-        <activity android:name=".Login.Login" />
+        <activity android:name=".Tablero.Tablero" />
     </application>
 
 </manifest>
